crates/fig-lexer/tests/snapshots/integration_tests__using__simple.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Using
- Std
- ColonColon
- Ident: io
- Newline
- Using
- Core
- ColonColon
- Ident: memory
- Newline
- Using
- Core
- ColonColon
- Ident: iter
- Newline
