crates/fig-lexer/tests/snapshots/integration_tests__using__with_visibility.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Public
- Using
- Ident: api
- ColonColon
- Ident: types
- Newline
- Export
- Using
- Core
- ColonColon
- Ident: primitives
- Newline
- Private
- Using
- Ident: internal
- ColonColon
- Ident: helpers
- Newline
